Waypoint Manager 2.4.1
- Correctly display name for "clustered" waypoints (Alpha, Beta, Gamma).
- Fix for duplicated waypoints (thanks Dr. Jet).

Waypoint Manager 2.4.0
- Added glide slope angle to assist with landing planes.
- Added option to change waypoint opacity.
- Made waypoints fade when they get occluded instead of just instantly becoming invisible.
- Corrected order of latitude/longitude boxes in custom waypoint editor.
- Allow custom waypoints to be placed in the map view on bodies other than the one the active vessel is on.

Waypoint Manager 2.3.4
- Stop fighting with CKAN and just realease update to support KSP 1.0.4

Waypoint Manager 2.3.3
- Hide waypoints when they are disabled.
- Update version file to support KSP 1.0.3

Waypoint Manager 2.3.2
- Re-release due to screwed up version file in last release.

Waypoint Manager 2.3.1
- KSP 1.0.2 compatibility.
- Fix problem with incorrect waypoint distances for mid-air/orbital waypoints.

Waypoint Manager 2.3.0
- KSP 1.0 compatibility.
- Support DDS textures for waypoint icons.

Waypoint Manager 2.2.1
- Fix for NRE error in tracking station.
- Fix issue where custom waypoint keep getting duplicated (thanks Luskhen).

Waypoint Manager 2.2.0
- Now correctly supports sandbox/science modes.
- Added import/export to file for custom waypoints (in settings menu).
- Fix possible NullReferenceException on quit.

Waypoint Manager 2.1.6
- Fix for NullReferenceException in some cases.
- Fix for Module Manager reload (and possibly other scenarios) causing the add-on to get started multiple times (causes possible performance/rendering issues).
- Don't occlude waypoints when really close (fixes issues with waypoints at the top of hills disappearing).

Waypoint Manager 2.1.4
- Additional fixes for Jool/Sun waypoints.

Waypoint Manager 2.1.3
- Fixes for possible NullReferenceException (thanks Spheniscine).

Waypoint Manager 2.1.2
- License change - now licensed under the MIT license.