@@ -1,6 +1,7 @@
 Waypoint Manager 2.4.1
 - Correctly display name for "clustered" waypoints (Alpha, Beta, Gamma).
 - Fix for duplicated waypoints (thanks Dr. Jet).
+- Added Apply button to custom waypoint dialog (thanks 5thHorseman).
 
 Waypoint Manager 2.4.0
 - Added glide slope angle to assist with landing planes.
